Adding github repo for lab

--- a/content/assignment/02-lab.html
+++ b/content/assignment/02-lab.html
@@ -25,7 +25,7 @@ in general team members organize such that there are no overlapping editing of
 the files, git is smart enough to avoid clashes when multiple edits are done in
 the same document<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>. To show this, we will do a collaborative edit of
 a file!</p>
-<p>We will be working with the repository <code>TBD</code></p>
+<p>We will be working with the repository <a href="https://github.com/USCbiostats/PM566-fall2020-whoami" class="uri">https://github.com/USCbiostats/PM566-fall2020-whoami</a></p>
 <div id="step-1-for-the-project-in-your-repo" class="section level2">
 <h2>Step 1: For the project in your repo</h2>
 <p>Not a term/command actually available in Git, forking is a feature available in
