--- a/static/slides/02-version-control/slides.html
+++ b/static/slides/02-version-control/slides.html
@@ -4,7 +4,8 @@
     <title>Version control and reproducible research</title>
     <meta charset="utf-8" />
     <meta name="author" content="George G. Vega Yon" />
-    <link rel="stylesheet" href="theme.css" type="text/css" />
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
@@ -388,7 +389,6 @@ doc/**/*.pdf
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
-<script src="macros.js"></script>
 <script>var slideshow = remark.create({
 "ratio": "16:9",
 "highlightStyle": "github",
