--- a/content/assignment/03-hw1.html
+++ b/content/assignment/03-hw1.html
@@ -1,11 +1,9 @@
----
-title: "Assignment 01 - Exploratory Data Analysis"
-output: tufte::tufte_html
-link-citations: yes
----
 
 
-
+<div id="due-date" class="section level1">
+<h1>Due Date</h1>
+<p>This assignment is due at the end of the day September 9th, 2020</p>
+</div>
 <div id="learning-goals" class="section level1">
 <h1>Learning Goals</h1>
 <ul>
