--- a/content/assignment/04-lab.html
+++ b/content/assignment/04-lab.html
@@ -1,3 +1,9 @@
+---
+title: "Lab 04 - Exploratory Data Analysis"
+output: html_document
+link-citations: yes
+---
+
 
 
 <div id="learning-goals" class="section level1">
