Adding HW2 and readings for week 5

--- a/content/class/05-class.html
+++ b/content/class/05-class.html
@@ -1,8 +1,8 @@
 ---
-title: "High performance computing, cloud computing"
-linktitle: "10: HPC"
-date: "2020-10-21"
-class_date: "2020-10-21"
+title: "Data cleaning and wrangling"
+linktitle: "5: Data Wrangling"
+date: "2020-01-10"
+class_date: "2020-09-16"
 citeproc: false
 bibliography: ../../static/bib/references.bib
 csl: ../../static/bib/chicago-syllabus-no-bib.csl
@@ -26,16 +26,17 @@ editor_options:
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/assignment/10-lab/">link</a></p>
+<p><a href="/assignment/05-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/10-hpc/slides.html">link</a></p>
+<p><a href="/slides/05-data-wrangling/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
 <ul>
-<li><a href="https://git-scm.com">Git</a></li>
-<li><a href="https://github.com">GitHub</a></li>
+<li>R <a href="https://rdatatable.gitlab.io/data.table/">data.table</a></li>
+<li>python <a href="https://github.com/h2oai/datatable">data.table</a></li>
+<li><a href="https://www.python.org/">Python</a> and <a href="https://jupyter.org/">Jupyter</a></li>
 </ul>
 </div>
