--- a/content/reading/05-reading.html
+++ b/content/reading/05-reading.html
@@ -21,8 +21,9 @@ book <a href="https://r4ds.had.co.nz/">R for Data Science</a></p></li>
 <div id="optional-reading" class="section level1">
 <h1>Optional reading</h1>
 <ul>
-<li>We recommend you going through the instructions to download Python
+<li><p>We recommend you going through the instructions to download Python
 <a href="https://wiki.python.org/moin/BeginnersGuide/Download">here</a> and installing
-jupyter <a href="https://jupyter.org/install">here</a>.</li>
+jupyter <a href="https://jupyter.org/install">here</a>.</p></li>
+<li><p>While we will not be using Pandas, here is a <a href="https://pandas.pydata.org/docs/user_guide/10min.html">neat short intro</a> to it.</p></li>
 </ul>
 </div>
