--- a/content/assignment/05-lab.html
+++ b/content/assignment/05-lab.html
@@ -22,17 +22,17 @@ output: html_document
 <div id="part-1-setup-the-git-project-and-the-github-repository" class="section level1">
 <h1>Part 1: Setup the Git project and the GitHub repository</h1>
 <ol style="list-style-type: decimal">
-<li><p>Go to your documents (or wherever you are planning to store the data) in your computer, and create a folder for this project, for example, “PM566-lab05”</p></li>
-<li><p>In that folder, save <a href="">this template</a> as “README.Rmd”. This will be the markdown file where all the magic will happen.</p></li>
-<li><p>Go to your GitHub account and create a new repository, hopefully of the same name that this folder has, i.e., “PM566-lab05”.</p></li>
+<li><p>Go to your documents (or wherever you are planning to store the data) in your computer, and create a folder for this project, for example, “PM566-labs”</p></li>
+<li><p>In that folder, save <a href="https://raw.githubusercontent.com/USCbiostats/PM566/master/content/assignment/05-lab.Rmd">this template</a> as “README.Rmd”. This will be the markdown file where all the magic will happen.</p></li>
+<li><p>Go to your GitHub account and create a new repository, hopefully of the same name that this folder has, i.e., “PM566-labs”.</p></li>
 <li><p>Initialize the Git project, add the “README.Rmd” file, and make your first commit.</p></li>
 <li><p>Add the repo you just created on GitHub.com to the list of remotes, and push your commit to origin while setting the upstream.</p></li>
 </ol>
 <p>Most of the steps can be done using command line:</p>
 <pre class="sh"><code># Step 1
 cd ~/Documents
-mkdir PM566-lab05
-cd PM566-lab05
+mkdir PM566-labs
+cd PM566-labs
 
 # Step 2
 wget https://raw.githubusercontent.com/USCbiostats/PM566/master/content/assignment/05-lab.Rmd 
@@ -47,13 +47,13 @@ git add README.Rmd
 git commit -m &quot;First commit&quot;
 
 # Step 5
-git remote add origin git@github.com:[username]/PM566-lab05
+git remote add origin git@github.com:[username]/PM566-labs
 git push -u origin master</code></pre>
 <p>You can also complete the steps in R (replace with your paths/username when needed)</p>
 <pre class="r"><code># Step 1
 setwd(&quot;~/Documents&quot;)
-dir.create(&quot;PM566-lab05&quot;)
-setwd(&quot;PM566-lab05&quot;)
+dir.create(&quot;PM566-labs&quot;)
+setwd(&quot;PM566-labs&quot;)
 
 # Step 2
 download.file(
@@ -68,7 +68,7 @@ system(&quot;git init &amp;&amp; git add README.Rmd&quot;)
 system(&#39;git commit -m &quot;First commit&quot;&#39;)
 
 # Step 5
-system(&quot;git remote add origin git@github.com:[username]/PM566-lab05&quot;)
+system(&quot;git remote add origin git@github.com:[username]/PM566-labs&quot;)
 system(&quot;git push -u origin master&quot;)</code></pre>
 <p>Once you are done setting up the project, you can now start working with the MET data.</p>
 <div id="setup-in-r" class="section level2">
@@ -92,7 +92,9 @@ stations &lt;- unique(stations[, list(USAF, CTRY, STATE)])
 # Dropping NAs
 stations &lt;- stations[!is.na(USAF)]
 
-head(stations, n = 4)</code></pre>
+# Removing duplicates
+stations[, n := 1:.N, by = .(USAF)]
+stations &lt;- stations[n == 1,][, n := NULL]</code></pre>
 <ol start="3" style="list-style-type: decimal">
 <li>Merge the data as we did during the lecture.</li>
 </ol>
@@ -104,11 +106,33 @@ head(stations, n = 4)</code></pre>
 </div>
 <div id="question-2-representative-station-per-state" class="section level2">
 <h2>Question 2: Representative station per state</h2>
-<p>Just like the previous question, you are asked to identify what is the most representative, the median, station per state. This time, instead of looking at one variable at a time, look at the euclidean distance.</p>
+<p>Just like the previous question, you are asked to identify what is the most representative, the median, station per state. This time, instead of looking at one variable at a time, look at the euclidean distance. If multiple stations show in the median, select the one located at the lowest latitude.</p>
 <p>Knit the doc and save it on GitHub.</p>
 </div>
 <div id="question-3-in-the-middle" class="section level2">
 <h2>Question 3: In the middle?</h2>
 <p>For each state, identify what is the station that is closest to the mid-point of the state. Combining these with the stations you identified in the previous question, use <code>leaflet()</code> to visualize all ~100 points in the same figure, applying different colors for those identified in this question.</p>
+<p>Knit the doc and save it on GitHub.</p>
+</div>
+<div id="question-4-means-of-means" class="section level2">
+<h2>Question 4: Means of means</h2>
+<p>Using the <code>quantile()</code> function, generate a summary table that shows the number of states included, average temperature, wind-speed, and atmospheric pressure by the variable “average temperature level,” which you’ll need to create.</p>
+<p>Start by computing the states’ average temperature. Use that measurement to classify them according to the following criteria:</p>
+<ul>
+<li>low: temp &lt; 20</li>
+<li>Mid: temp &gt;= 20 and temp &lt; 25</li>
+<li>High: temp &gt;= 25</li>
+</ul>
+<p>Once you are done with that, you can compute the following:</p>
+<ul>
+<li>Number of entries (records),</li>
+<li>Number of NA entries,</li>
+<li>Number of stations,</li>
+<li>Number of states included, and</li>
+<li>Mean temperature, wind-speed, and atmospheric pressure.</li>
+</ul>
+<p>All by the levels described before.</p>
+<p>Knit the document, commit your changes, and push them to GitHub. If you’d like, you can take this time to include the link of <a href="https://github.com/USCbiostats/PM566/issues/23">the issue of the week</a> so that you let us know when you are done, e.g.,</p>
+<pre class="bash"><code>git commit -a -m &quot;Finalizing lab 5 https://github.com/USCbiostats/PM566/issues/23&quot;</code></pre>
 </div>
 </div>
