--- a/content/reading/07-reading.html
+++ b/content/reading/07-reading.html
@@ -1,5 +1,5 @@
 ---
-title: "Text mining and Regular Expressions"
+title: "Version Constrol and Github"
 date: "2020-09-30"
 citeproc: false
 bibliography: ../../static/bib/references.bib
@@ -11,12 +11,9 @@ csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
 
 <div id="required-reading" class="section level1">
 <h1>Required reading</h1>
-<ul>
-<li><a href="https://r4ds.had.co.nz/strings.html">Chapter 14</a> or <a href="https://r4ds.had.co.nz/">R for Data Science</a> by <a href="https://twitter.com/StatGarrett">Garrett Grolemund</a> and <a href="https://twitter.com/hadleywickham">Hadley Wickham</a>.</li>
-<li><a href="https://www.tidytextmining.com/tidytext.html">Chapter 1</a> of <a href="https://www.tidytextmining.com/">Text Mining with R</a> by <a href="https://twitter.com/juliasilge">Julia Silge</a> and <a href="https://twitter.com/drob">David Robinson</a>.</li>
-</ul>
+<p>To be announced</p>
 </div>
 <div id="optional-reading" class="section level1">
 <h1>Optional reading</h1>
-<p>If you want more indept information about what is happening with regards to using text as data, tokenization, stopwords etc. Then you can look at the first 4 chapters of <a href="https://smltar.com/">Supervised Machine Learning for Text Analysis in R</a> by <a href="https://twitter.com/Emil_Hvitfeldt">Emil Hvitfeldt</a> and <a href="https://twitter.com/juliasilge">Julia Silge</a>.</p>
+<p>To be announced</p>
 </div>
