add week 6 slides and lab

--- a/content/class/06-class.html
+++ b/content/class/06-class.html
@@ -1,6 +1,6 @@
 ---
-title: "Regular Expressions, Big Data, Data scraping and using APIs, data security"
-linktitle: "06: Data scraping"
+title: "Text mining"
+linktitle: "06: Text Mining"
 date: "2020-09-23"
 class_date: "2020-09-23"
 citeproc: false
@@ -27,13 +27,17 @@ editor_options:
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p>To be announced</p>
+<p><a href="/assignment/06-lab">link</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p>To be announced</p>
+<p><a href="/slides/06-textmining/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
-<p>To be announced</p>
+<ul>
+<li>R <a href="https://juliasilge.github.io/tidytext/">tidytext</a> package</li>
+<li><a href="https://www.tidytextmining.com/">Text Mining with R</a></li>
+<li><a href="https://smltar.com/">Supervised Machine Learning for Text Analysis in R</a></li>
+</ul>
 </div>
