Working on Week 7

--- a/content/class/07-class.html
+++ b/content/class/07-class.html
@@ -1,6 +1,6 @@
 ---
-title: "Text mining and Regular Expressions"
-linktitle: "07: text mining"
+title: "Week 7: Scraping, APIs, and Regular Expressions"
+linktitle: "07: Scraping, APIs, and Regex"
 date: "2020-09-30"
 class_date: "2020-09-30"
 citeproc: false
@@ -21,7 +21,6 @@ editor_options:
 ---
 
 <!-- BLOGDOWN-HEAD -->
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <!-- /BLOGDOWN-HEAD -->
 
 
@@ -30,7 +29,7 @@ editor_options:
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
-<p><a href="/slides/07-textmining/slides.html">link</a></p>
+<p><a href="/slides/07-apis-regex/slides.html">link</a></p>
 </div>
 <div id="links" class="section level2">
 <h2>Links</h2>
